syntax = "proto3";

option csharp_namespace = "OrderService.Application.Protos";

package product;

service ProductService{
	rpc GetByIds(ProductsByIdsRequest) returns (ProductsResponse);
}

message ProductsByIdsRequest{
	repeated string ids = 1;
}

message ProductsResponse{
	repeated ProductResponse products = 1;
}

message ProductResponse{
	string id = 1;
	string title = 2;
	double price = 3;
}